tests/shell/fail/captureerr.ish
r = sh -c "echo forwarded >&2; exit 9"
println r
exit 9
